--- a/examples/cluster_config/mike_stampede.yaml
+++ b/examples/cluster_config/mike_stampede.yaml
@@ -4,7 +4,7 @@ userEmail: killaMike@stccmop.org
 userAccountNb: TG-OCENNNNNN
 resourceManager: slurm  # NOTE this is not used
 submitExec: sbatch
-mpiExec: ibrun tacc_affinity # does this comment show up
+mpiExec: ibrun tacc_affinity
 # NOTE submission script patten should have all possible rows; unused rows will be removed
 scriptPattern: |
     #!/bin/bash
