support logFileDir: {logFile} will be replaced by {logFileDir}/{logFile}

--- a/examples/cluster_config/joe_sirius.yaml
+++ b/examples/cluster_config/joe_sirius.yaml
@@ -1,6 +1,6 @@
 userEmail: glassJoe@stccmop.org
 userAccountNb: j007
-logFileDir: log
+logFileDir: /tmp/logs
 submitExec: qsub
 mpiExec: mpirun -n {nthread}  # number of threads will be substuted
 nCoresSocket: 4  # TODO are these needed?
