implemented yaml job file parser; added example job file; moved laucher routines to laucher.py

--- a/examples/cluster_config/mike_stampede.yaml
+++ b/examples/cluster_config/mike_stampede.yaml
@@ -2,7 +2,7 @@
 # 
 userEmail: killaMike@stccmop.org
 userAccountNb: TG-OCENNNNNN
-resourceManager: slurm  # NOTE this is not used
+resourceManager: slurm
 submitExec: sbatch
 mpiExec: ibrun tacc_affinity
 # NOTE submission script patten should have all possible rows; unused rows will be removed
