fix sge example file

--- a/examples/cluster_config/joe_sirius.yaml
+++ b/examples/cluster_config/joe_sirius.yaml
@@ -16,8 +16,8 @@ scriptPattern: |
     #$ -pe orte {nproc}
     #$ -M {userEmail}
     #$ -A {userAccountNb}
-    #$ --dependency=afterany:{parentJobAny}
-    #$ --dependency=afterok:{parentJobOk}
+    #$ -hold_jid {parentJobAny}
+    #$ -hold_jid {parentJobOk}
     #$ -m ea
-    #$ -j
+    #$ -j y
     #$ -V
