--- a/examples/job_config/simple_job.yaml
+++ b/examples/job_config/simple_job.yaml
@@ -10,14 +10,18 @@ sleepTime: 10
 # NOTE job identifier strings can be used as dependency in other runs
 job_fast_asleep:       # everything after job_ is jobName
     queue:    normal
-    logFile:  log_simple
+    logFileDir: tmp_log_dir
+    logFile:  log_simple   # log file given to the queue manager
     nproc:    1
-    time:              # creates timeRequest instance
+    time:                  # creates timeRequest instance
         hours:   0
         minutes: 2
         seconds: 0
-    task_1:            # tasks must have unique names beginning with task_
-                       # command is required
-        command: 'echo "sleeping" && sleep {sleepTime} && echo "{ending}"'
-        ending: done   # used can define task specific tags
+    task_1:                # tasks must have unique names beginning with task_
+                           # command is required
+        command: 'sleep {sleepTime} && echo "{message}"'
+        message: sleeping  # used can define new task specific tags
+        logFile: log_task1 # command output redirected here
+        redirMode: replace # replace or append
+
 
