added global clusterParams object, try to initialize parameters from default user file or env variable

--- a/examples/cluster_config/sara_edison.yaml
+++ b/examples/cluster_config/sara_edison.yaml
@@ -6,7 +6,7 @@ mpiExec: aprun -n {nthread}
 nCoresProc: 12
 nCoresNode: 24
 resourceManager: pbs
-runDir: $PBS_O_WORKDIR
+#runDir: $PBS_O_WORKDIR
 scriptPattern: |
     #!/bin/bash
     #PBS -q {queue}
